[project]
name = "backend-clustering-siswa"
version = "0.1.0"
description = "Python AI Runtime for SIMORBATAS Student Clustering"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "pydantic>=2.7.4",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.2",
    "firebase-admin>=6.5.0"
]

[tool.vercel]
entrypoint = "api/index.py"
